<resources>
    <string name="app_name">LoundryYuk</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="email">Email</string>
    <string name="kirim_kode">Kirim Kode</string>
    <string name="tambah_cabang">Tambah Cabang</string>
    <string name="masukkan_cabang">Masukkan Cabang</string>
    <string name="cabang">Cabang</string>
    <string name="transaksi">Transaksi</string>
    <string name="karyawan">Karyawan</string>
    <string name="setting">Setting</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="button_text_ok">Berhasil</string>
    <string name="error_email_not_valid">email is not valid</string>
    <string name="error_password_not_valid">password at least 8 character</string>
</resources>